# succession

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml
01_intro/: index.md
02_rules/: index.md
bibliography/: index.md
docs/: index.html
docs/01_intro/: index.html
docs/02_rules/: index.html
docs/bibliography/: index.html
docs/conduct/: index.html
docs/contrib/: index.html
docs/finale/: index.html
docs/fired/: index.html
docs/firing/: index.html
docs/glossary/: index.html
docs/handover/: index.html
docs/helping/: index.html
docs/intro/: index.html
docs/license/: index.html
docs/planned/: index.html
docs/rushed/: index.html
docs/shutdown/: index.html
docs/sudden/: index.html
extras/: links.txt  unused.md
finale/: index.md
glossary/: index.md
handover/: index.md
helping/: index.md
intro/: index.md
planned/: index.md
shutdown/: index.md
sudden/: index.md
templates/: page.html
unused/: rushed.md  shutdown.md  todo.md
