[project]
name = "change"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "linkchecker",
    "mccole>=0.5.0"
]

[tool.mccole]
skips = ["extras", "templates", "uv.lock"]

[tool.mccole.renames]
"README.md" = ""
"CODE_OF_CONDUCT.md" = "conduct"
"CONTRIBUTING.md" = "contrib"
"LICENSE.md" = "license"
